[develop]
script_dir=$base/lib/helios_description
[install]
install_scripts=$base/lib/helios_description

[metadata]
name = helios_description
version = 0.1.0
license_files = LICENSE

[options]
packages = find:

[options.package_data]
* = models/**/*.sdf,
    models/**/*.config,
    models/**/*.dae,
    models/**/*.stl,
    models/**/*.png,
    models/**/*.jpg
